--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <section id="services">
         <h2>Наши услуги</h2>
         <div class="services">
-            <div class="service-item">
+            <div class="service-item-bodypolish">
                 <h3>Полировка кузова</h3>
                 <p>Восстановление идеального блеска вашего автомобиля с помощью полировочных средств.</p>
             </div>
-            <div class="service-item">
+            <div class="service-item-scheinwerfer">
                 <h3>Полировка фар</h3>
                 <p>Восстановление прозрачности и яркости фар, улучшение видимости на дороге.</p>
             </div>
-            <div class="service-item">
+            <div class="service-item-inner">
                 <h3>Детейлинг интерьера</h3>
                 <p>Чистка и уход за салоном автомобиля, восстановление кожи и тканей.</p>
             </div>
-            <div class="service-item">
+            <div class="service-item-body">
                 <h3>Защита покрытия</h3>
                 <p>Нанесение защитных покрытий для кузова автомобиля, сохранение блеска и защиты от внешних воздействий.
                 </p>
