--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
     </section>
 
     <section id="contact">
-        <h2>Свяжитесь с нами</h2>
+        <div class="contactUns">
+            <h2>Свяжитесь с нами</h2>
+        </div>
+       
         
             <form action="#" method="POST">
                 <container>
