--- a/index.html
+++ b/index.html
@@ -31,26 +31,26 @@
 
     <section id="services">
         <h2>Unsere Dienstleistungen</h2>
-        <div class="services">
-            <div class="service-item-bodypolish">
+        <ul class="services">
+            <li class="service-item-bodypolish">
                 <h3>Karosserielackpolitur</h3>
-                <p>Wiederherstellung des perfekten Glanzes Ihres Fahrzeugs mit Poliermitteln</p>
-            </div>
-            <div class="service-item-scheinwerfer">
+                <!-- <p>Wiederherstellung des perfekten Glanzes Ihres Fahrzeugs mit Poliermitteln</p> -->
+            </li>
+            <li class="service-item-scheinwerfer">
                 <h3>Scheinwerferpolitur</h3>
-                <p>Wiederherstellung der Klarheit und Helligkeit der Scheinwerfer, Verbesserung der Sichtbarkeit auf der Straße</p>
-            </div>
-            <div class="service-item-inner">
+                <!-- <p>Wiederherstellung der Klarheit und Helligkeit der Scheinwerfer, Verbesserung der Sichtbarkeit auf der Straße</p> -->
+            </li>
+            <li class="service-item-inner">
                 <h3>Innenraum-Detailing</h3>
-                <p>Reinigung und Pflege des Fahrzeuginnenraums, Restaurierung von Leder und Stoffen/p>
-            </div>
-            <div class="service-item-body">
+                <!-- <p>Reinigung und Pflege des Fahrzeuginnenraums, Restaurierung von Leder und Stoffen/p> -->
+            </li>
+            <li class="service-item-body">
                 <h3>Beschichtungsschutz</h3>
-                <p>Auftragen von Schutzbeschichtungen auf die Karosserie des Fahrzeugs, um den Glanz zu bewahren und vor äußeren Einflüssen
+                <!-- <p>Auftragen von Schutzbeschichtungen auf die Karosserie des Fahrzeugs, um den Glanz zu bewahren und vor äußeren Einflüssen
                 zu schützen
-                </p>
-            </div>
-        </div>
+                </p> -->
+            </li>
+        </ul>
     </section>
 
     <section id="gallery">
