--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 
     <header>
         <nav>
+            <a href="./index.html" class="logo  ">Web<span class="logo-dark">Studio</span></a>
             <ul>
-                <li><a href="#home">Startseite</a></li>
+                <!-- <li><a href="#home">Startseite</a></li> -->
                 <li><a href="#services">Dienstleistungen</a></li>
                 <li><a href="#gallery">Galerie</a></li>
                 <li><a href="#contact">Kontakt</a></li>
