--- a/index.html
+++ b/index.html
@@ -10,8 +10,24 @@
     </link>
 
 <body>
-
-    <header>
+    <header class="header">
+        <div class="container">
+            <!-- <div class="logo">
+                <img src="images/logo.png" alt="PoliturCenter">
+            </div> -->
+            <a href="./index.html" class="logo  ">Politur<span class="logo-dark">Studio</span></a>
+            <button class="menu-toggle">Menu</button> <!-- Кнопка для открытия меню на мобильных устройствах -->
+            <nav class="nav">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- <header>
         <nav>
             <a href="./index.html" class="logo  ">Web<span class="logo-dark">Studio</span></a>
             <ul>
@@ -21,7 +37,7 @@
                 <li><a href="#contact">Kontakt</a></li>
             </ul>
         </nav>
-    </header>
+    </header> -->
 
     <section id="home" class="hero">
         <div class="hero-content">
@@ -98,7 +114,7 @@
         <p>&copy; 2024 Auto Politur Zentrum</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
