--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
                 <img src="images/logo.png" alt="PoliturCenter">
             </div> -->
             <a href="./index.html" class="logo  ">Politur<span class="logo-dark">Studio</span></a>
-            <button class="menu-toggle">Menu</button> <!-- Кнопка для открытия меню на мобильных устройствах -->
+            
+                <button class="menu-toggle">
+                    <img src="image/fingerprint.png" alt="Fingerprint Icon" class="fingerprint-icon">
+                    <!-- Изображение отпечатка пальца -->
+               
+            </button> <!-- Кнопка для открытия меню на мобильных устройствах -->
             <nav class="nav">
                 <ul>
                     <li><a href="#home">Home</a></li>
