--- a/index.html
+++ b/index.html
@@ -32,24 +32,14 @@
             </nav>
         </div>
     </header>
-    <!-- <header>
-        <nav>
-            <a href="./index.html" class="logo  ">Web<span class="logo-dark">Studio</span></a>
-            <ul>
-                <!-- <li><a href="#home">Startseite</a></li> -->
-                <li><a href="#services">Dienstleistungen</a></li>
-                <li><a href="#gallery">Galerie</a></li>
-                <li><a href="#contact">Kontakt</a></li>
-            </ul>
-        </nav>
-    </header> -->
+   
 
     <section id="home" class="hero">
         <div class="hero-content">
             <h1>Professionelle Fahrzeugpolitur</h1>
             <p>Wiederherstellung des Glanzes Ihres Fahrzeugs mit modernen Technologien und hochwertigen Materialien</p>
         </div>
-    </section>
+   
 
     <section id="services">
         <h2>Unsere Dienstleistungen</h2>
@@ -74,16 +64,16 @@
             </li>
         </ul>
     </section>
-
+</section>
     <section id="gallery">
         <h2>Ergebnisse unserer Arbeit</h2>
         <div class="gallery">
-            <div class="gallery-item">
+            <!-- <div class="gallery-item">
                 <img src="before1.jpg" alt="До полировки">
                 <p>Vorher</p>
-            </div>
+            </div> -->
             <div class="gallery-item">
-                <img src="after1.jpg" alt="После полировки">
+                <img src="image/IMG_3566.JPG" alt="После полировки">
                 <p>Nachher</p>
             </div>
             <!-- Добавьте дополнительные изображения для "до" и "после" -->
